--- a/porfolio/template/eyes/proyectos.html
+++ b/porfolio/template/eyes/proyectos.html
@@ -311,7 +311,7 @@ Mis proyectos
                         onclick="aparecerCriptoWordMovil()" style="display: none;"> Volver</div>
                 </div>
             </div>
-            <img src='{% static "imagenes/eyes/icon S.png" %}' height="100%" id="icons" />
+            <img src='{% static "imagenes/eyes/icon S.png" %}' height="100%" id="icons-criptoword" />
 
         </div>
         <div class="bloque-proyecto">
