--- a/porfolio/staticfiles/css/index.css
+++ b/porfolio/staticfiles/css/index.css
@@ -402,7 +402,7 @@
     }
 
 
-    #icons {
+    #icons-criptoword {
         position: relative;
         transform: translate(-50%);
     }
@@ -429,7 +429,7 @@
         transform: translate(-50%);
     }
 
-    
+
 
     .detalles {
         position: relative;
