--- a/porfolio/template/eyes/proyectos.html
+++ b/porfolio/template/eyes/proyectos.html
@@ -224,8 +224,8 @@ Mis proyectos
 
 
 
-                                    <a href="https://github.com/horacio-a/Next-Change-Front" target="_blank" class="boton-proyectos" id="botonNext4"
-                                        style="display: none;">github</a>
+                                    <a href="https://github.com/horacio-a/Next-Change-Front" target="_blank"
+                                        class="boton-proyectos" id="botonNext4" style="display: none;">github</a>
 
                                     <a href="https://next-change.herokuapp.com" target="_blank" class="boton-proyectos"
                                         id="botonNext5" style="display: none;">ver
@@ -346,7 +346,7 @@ Mis proyectos
             </div>
             <img src='{% static "imagenes/eyes/BonhomiaLogo.png" %}' height="100%" id="icon-bonhomia" />
         </div>
-        
+
         <div class="bloque-proyecto">
             <div class="detalles" id="detalle-calculadora">
                 <div class="titulo-mask" style=" font-size: 1.5vh ; ">
@@ -394,10 +394,11 @@ Mis proyectos
                     <button class="boton-proyectos" id="botonchatPriv2Movil" onclick="proyectochatPrivMovil()">
                         Ver el Proyecto
                     </button>
-                    <a href="https://github.com/horacio-a/Chat-en-tiempo-real" class="boton-proyectos"
-                        id="botonchatPriv4Movil" style="display: none;">github</a>
-                    <a href="https://chat-priv.herokuapp.com" class="boton-proyectos" id="botonchatPriv5Movil"
-                        style="display: none;">ver en la web</a>
+                    <a href="https://github.com/horacio-a/Next-Change-Front" target="_blank" class="boton-proyectos"
+                        id="botonNext4" style="display: none;">github</a>
+                    <a href="https://next-change.herokuapp.com" target="_blank" class="boton-proyectos" id="botonNext5"
+                        style="display: none;">ver
+                        en la web</a>
                     <div class="estructurabotones" id="BotoneschatPriv1Movil">
                         <div class="miniboton-proyectos"> HTML</div>
                         <div class="miniboton-proyectos"> CSS</div>
