arreglo href movil eyes

--- a/porfolio/template/eyes/proyectos.html
+++ b/porfolio/template/eyes/proyectos.html
@@ -294,9 +294,9 @@ Mis proyectos
                     <button class="boton-proyectos" id="boton-CriptoWord2-movil" onclick="proyectoCriptoWordMovil()">
                         Ver el Proyecto
                     </button>
-                    <a href="https://github.com/horacio-a" class="boton-proyectos" id="boton-CriptoWord4-movil"
+                    <a href="https://github.com/horacio-a/Criptoword-front" class="boton-proyectos" id="boton-CriptoWord4-movil"
                         style="display: none;">github</a>
-                    <a href="https://horaciomalbornoz.com.ar" class="boton-proyectos" id="boton-CriptoWord5-movil"
+                    <a href="http://criptoword.com.ar" class="boton-proyectos" id="boton-CriptoWord5-movil"
                         style="display: none;">ver en la web</a>
                     <div class="estructurabotones" id="botones-CriptoWord1-movil">
                         <div class="miniboton-proyectos"> HTML</div>
@@ -327,9 +327,9 @@ Mis proyectos
                     <button class="boton-proyectos" id="botonEcommerce2Movil" onclick="proyectoEcommerceMovil()">
                         Ver el Proyecto
                     </button>
-                    <a href="https://github.com/horacio-a" class="boton-proyectos" id="botonEcommerce4Movil"
+                    <a href="https://github.com/horacio-a/Espacio-bonhomia" class="boton-proyectos" id="botonEcommerce4Movil"
                         style="display: none;">github</a>
-                    <a href="https://horaciomalbornoz.com.ar" class="boton-proyectos" id="botonEcommerce5Movil"
+                    <a href="https://espacio-bonhomia.herokuapp.com" class="boton-proyectos" id="botonEcommerce5Movil"
                         style="display: none;">ver en la web</a>
                     <div class="estructurabotones" id="BotonesEcommerce1Movil">
                         <div class="miniboton-proyectos"> HTML</div>
@@ -361,9 +361,9 @@ Mis proyectos
                     <button class="boton-proyectos" id="botonCalculadora2Movil" onclick="proyectoCalculadoraMovil()">
                         Ver el Proyecto
                     </button>
-                    <a href="https://github.com/horacio-a" class="boton-proyectos" id="botonCalculadora4Movil"
+                    <a href="https://github.com/horacio-a/calculadora-extencion" class="boton-proyectos" id="botonCalculadora4Movil"
                         style="display: none;">github</a>
-                    <a href="https://horaciomalbornoz.com.ar" class="boton-proyectos" id="botonCalculadora5Movil"
+                    <a href="https://chrome.google.com/webstore/detail/calculadora/bejdbiknjfcgcllbcfgamogcefnojoak?hl=es&authuser=0" class="boton-proyectos" id="botonCalculadora5Movil"
                         style="display: none;">ver en la web</a>
                     <div class="estructurabotones" id="botonesCalculadora1Movil">
                         <div class="miniboton-proyectos"> HTML</div>
@@ -394,9 +394,9 @@ Mis proyectos
                     <button class="boton-proyectos" id="botonchatPriv2Movil" onclick="proyectochatPrivMovil()">
                         Ver el Proyecto
                     </button>
-                    <a href="https://github.com/horacio-a/Next-Change-Front" target="_blank" class="boton-proyectos"
+                    <a href="https://github.com/horacio-a/Chat-en-tiempo-real" target="_blank" class="boton-proyectos"
                         id="botonNext4" style="display: none;">github</a>
-                    <a href="https://next-change.herokuapp.com" target="_blank" class="boton-proyectos" id="botonNext5"
+                    <a href=" https://chat-priv.herokuapp.com" target="_blank" class="boton-proyectos" id="botonNext5"
                         style="display: none;">ver
                         en la web</a>
                     <div class="estructurabotones" id="BotoneschatPriv1Movil">
@@ -427,9 +427,9 @@ Mis proyectos
                     <button class="boton-proyectos" id="botonNext2Movil" onclick="proyectoNextChangeMovil()">
                         Ver el Proyecto
                     </button>
-                    <a href="https://github.com/horacio-a/Chat-en-tiempo-real" class="boton-proyectos"
+                    <a href="https://github.com/horacio-a/Next-Change-Front" class="boton-proyectos"
                         id="botonNext4Movil" style="display: none;">github</a>
-                    <a href="https://chat-priv.herokuapp.com" class="boton-proyectos" id="botonNext5Movil"
+                    <a href="https://next-change.herokuapp.com" class="boton-proyectos" id="botonNext5Movil"
                         style="display: none;">ver en la web</a>
                     <div class="estructurabotones" id="BotonesNext1Movil">
                         <div class="miniboton-proyectos"> HTML</div>
