--- a/porfolio/template/space/proyecto.html
+++ b/porfolio/template/space/proyecto.html
@@ -392,8 +392,9 @@
                             <div class="conteiner-main-proyecto links">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto" href="">Link a github</a>
-                                    <a class="button-proyecto" href="">Link a la web</a>
+                                    <a class="button-proyecto"
+                                        href="https://github.com/horacio-a/Chat-en-tiempo-real">Link a github</a>
+                                    <a class="button-proyecto" href="https://chat-priv.herokuapp.com">Link a la web</a>
                                 </div>
                             </div>
 
@@ -427,10 +428,10 @@
                             <div class="conteiner-main-proyecto links">
                                 <div class="titulo-proyecto">Links</div>
                                 <div class="conteiner-button-proyecto">
-                                    <a class="button-proyecto" target="_blank"
+                                    <a class="button-proyecto"
                                         href="https://github.com/horacio-a/Next-Change-Front">Link a github</a>
-                                    <a class="button-proyecto" target="_blank"
-                                        href="https://next-change.herokuapp.com">Link a la web</a>
+                                    <a class="button-proyecto" href="https://next-change.herokuapp.com">Link a la
+                                        web</a>
                                 </div>
                             </div>
                         </div>
