--- a/porfolio/static/css/hub.css
+++ b/porfolio/static/css/hub.css
@@ -1,4 +1,4 @@
-    @font-face {
+    /* @font-face {
     font-family: lemonmilk;
     src: url('../fuentes/LEMONMILK-Regular.otf');
 }
@@ -16,7 +16,7 @@
 @font-face {
     font-family: chakra;
     src: url(cuartointento/fuentes/ChakraPetch-Regular.ttf);
-}
+} */
 body{
     background-color: #141F26;
     margin: 0em;
